--- a/src/integrations/integration.blazor/Pages/IxData/IxData.razor
+++ b/src/integrations/integration.blazor/Pages/IxData/IxData.razor
@@ -1,13 +1,8 @@
-﻿
-@page "/ixdata"
+﻿@page "/ixdata"
 <h3>IxData</h3>
 
+<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager" Presentation="Command"></RenderableContentControl>
 
-
-
-<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager" Presentation="Base"></RenderableContentControl>
-
-<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager" Presentation="Command-Control"></RenderableContentControl>
 @code {
 
 }
