--- a/src/data/src/ix.framework.data.blazor/Views/IxDataView.razor
+++ b/src/data/src/ix.framework.data.blazor/Views/IxDataView.razor
@@ -44,7 +44,7 @@ else
     <table class="table table-hover">
         <thead>
             <tr class="text-center">
-                <th scope="col">DataEntityId</th>
+                <th scope="col" class="w-75">DataEntityId</th>
                 @if (Presentation.Equals("Command"))
                 {
                     <th scope="col">Operate</th>
@@ -82,13 +82,15 @@ else
                         @if (Presentation.Equals("Command"))
                         {
                             <td>
-                                <a class="mx-1" style="cursor: pointer" title="Edit" data-bs-toggle="modal" data-bs-target="#editModal-@ViewGuid" @onclick="() => Vm.SelectedRecord = item">
+                                <button type="button" class="btn btn-primary px-3 py-0" data-bs-toggle="modal" title="Edit" data-bs-target="#editModal-@ViewGuid" @onclick="() => Vm.SelectedRecord = item">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                                     </svg>
-                                </a>
-                                <a class="mx-1" style="cursor: pointer; vertical-align: middle;" title="Remove" data-bs-toggle="modal" data-bs-target="#deleteModal-@ViewGuid" @onclick="() => Vm.SelectedRecord = item"><i class="oi oi-trash"></i></a>
+                                </button>
+                                <button type="button" class="btn btn-danger px-3 py-0" data-bs-toggle="modal" title="Delete" data-bs-target="#deleteModal-@ViewGuid" @onclick="() => Vm.SelectedRecord = item">
+                                    <i class="oi oi-trash"></i>
+                                </button>
                             </td>
                         }
                     </tr>
