--- a/src/integrations/integration.blazor/Pages/IxData/IxData.razor
+++ b/src/integrations/integration.blazor/Pages/IxData/IxData.razor
@@ -1,7 +1,7 @@
 ﻿@page "/ixdata"
 <h3>IxData</h3>
 
-<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager" Presentation="Command"></RenderableContentControl>
+<RenderableContentControl Context="Entry.Plc.MainContext.test_data_manager" Presentation="Command"></RenderableContentControl>
 
 @code {
 
