--- a/src/data/src/ix.framework.data.blazor/IxDataExchange/Command/DataExchangeCommandView.razor
+++ b/src/data/src/ix.framework.data.blazor/IxDataExchange/Command/DataExchangeCommandView.razor
@@ -1,5 +1,5 @@
 ﻿@namespace ix.framework.data
 @inherits RenderableViewModelComponentBase<DataExchangeCommandViewModel>
 
-<IxDataView Vm="@ViewModel.DataViewModel" Presentation="Command"></IxDataView>
+<IxDataView Vm="@ViewModel.DataViewModel" Presentation="Command" ModalDataView="false" CanExport="true"></IxDataView>
 
