updates to AX# packages

--- a/src/core/src/ix.framework.core.blazor/IxComponent/IxComponentView.razor
+++ b/src/core/src/ix.framework.core.blazor/IxComponent/IxComponentView.razor
@@ -1,7 +1,7 @@
 ﻿@namespace ix.framework.core
-@using Ix.Connector.ValueTypes
-@using Ix.Connector;
-@using Ix.Presentation.Blazor.Controls.Layouts.TabControlComponents;
+@using AXSharp.Connector.ValueTypes
+@using AXSharp.Connector;
+@using AXSharp.Presentation.Blazor.Controls.Layouts.TabControlComponents;
 @inherits  RenderableComplexComponentBase<IxComponent>;
 
 <div class="card">
