--- a/src/core/src/ix.framework.core.blazor/IxCoordination/IxStep/IxStepCommandView.razor
+++ b/src/core/src/ix.framework.core.blazor/IxCoordination/IxStep/IxStepCommandView.razor
@@ -1,6 +1,6 @@
 ﻿@namespace ix.framework.core
-@using Ix.Connector.ValueTypes
-@using Ix.Connector
+@using AXSharp.Connector.ValueTypes
+@using AXSharp.Connector
 @inherits RenderableComplexComponentBase<IxStep>
 
 <IxStepView Component="@Component" IsControllable="true"/>
