--- a/src/core/src/ix.framework.core.blazor/IxTask/IxTaskView.razor
+++ b/src/core/src/ix.framework.core.blazor/IxTask/IxTaskView.razor
@@ -1,5 +1,5 @@
 ﻿@namespace ix.framework.core
-@using Ix.Connector;
+@using AXSharp.Connector;
 @inherits RenderableComplexComponentBase<IxTask>
 @implements IDisposable;
 
