--- a/src/data/src/ix.framework.data.blazor/IxDataExchange/ColumnData.razor
+++ b/src/data/src/ix.framework.data.blazor/IxDataExchange/ColumnData.razor
@@ -8,6 +8,9 @@
     [Parameter]
     public string BindingValue { get; set; }
 
+    [Parameter]
+    public bool Clicable { get; set; } = true;
+
     [CascadingParameter]
     public IxDataView DataView { get; set; }
 
