added data visualization in docs

--- a/src/data/src/ix.framework.data.blazor/IxDataExchange/ColumnData.razor
+++ b/src/data/src/ix.framework.data.blazor/IxDataExchange/ColumnData.razor
@@ -9,7 +9,7 @@
     public string BindingValue { get; set; }
 
     [Parameter]
-    public bool Clicable { get; set; } = true;
+    public bool Clickable { get; set; } = true;
 
     [CascadingParameter]
     public IxDataView DataView { get; set; }
