--- a/src/data/src/ix.framework.data.blazor/IxDataExchange/Command/DataExchangeCommandView.razor
+++ b/src/data/src/ix.framework.data.blazor/IxDataExchange/Command/DataExchangeCommandView.razor
@@ -1,7 +1,4 @@
 ﻿@namespace ix.framework.data
 @inherits RenderableViewModelComponentBase<DataExchangeCommandViewModel>
 
-<IxDataView Vm="@ViewModel.DataViewModel" Presentation="Command" ModalDataView="false" CanExport="true">
-    <ix.framework.core.IxDataExchange.ColumnData HeaderName="Recipe name" BindingValue="RecipeName" Clicable="false" />
-    <ix.framework.core.IxDataExchange.ColumnData BindingValue="String1" />
-</IxDataView>
+<IxDataView Vm="@ViewModel.DataViewModel" Presentation="Command" />
