post refactoring upadtes and fixies

--- a/src/core/src/ix.framework.core.blazor/AxoComponent/AxoComponentCommandView.razor
+++ b/src/core/src/ix.framework.core.blazor/AxoComponent/AxoComponentCommandView.razor
@@ -1,4 +1,4 @@
 ﻿@namespace AXOpen.Core
 @inherits RenderableComplexComponentBase<AxoComponent>
 
-<IxComponentView Component="@Component" IsControllable="true" />
+<AxoComponentView Component="@Component" IsControllable="true" />
