--- a/src/core/src/ix.framework.core.blazor/AxoComponent/AxoComponentStatusView.razor
+++ b/src/core/src/ix.framework.core.blazor/AxoComponent/AxoComponentStatusView.razor
@@ -1,4 +1,4 @@
 ﻿@namespace AXOpen.Core
 @inherits RenderableComplexComponentBase<AxoComponent>
 
-<IxComponentView Component="@Component" IsControllable="false" />
+<AxoComponentView Component="@Component" IsControllable="false" />
