--- a/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoStep/AxoStepCommandView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoStep/AxoStepCommandView.razor
@@ -3,4 +3,4 @@
 @using AXSharp.Connector
 @inherits RenderableComplexComponentBase<AxoStep>
 
-<IxStepView Component="@Component" IsControllable="true"/>
+<AxoStepView Component="@Component" IsControllable="true"/>
