--- a/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoStep/AxoStepStatusView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoStep/AxoStepStatusView.razor
@@ -1,4 +1,4 @@
 ﻿@namespace AXOpen.Core
 @inherits RenderableComplexComponentBase<AxoStep>
 
-<IxStepView Component="@Component" IsControllable="false" />
+<AxoStepView Component="@Component" IsControllable="false" />
