Rafactoring data-namespace changed

--- a/src/data/src/AXOpen.Data.Blazor/IxDataExchange/Command/DataExchangeCommandView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/IxDataExchange/Command/DataExchangeCommandView.razor
@@ -1,4 +1,4 @@
-﻿@namespace ix.framework.data
+﻿@namespace AXOpen.Data
 @inherits RenderableViewModelComponentBase<DataExchangeCommandViewModel>
 
 <IxDataView Vm="@ViewModel.DataViewModel" Presentation="Command" ModalDataView="false" CanExport="true">
