--- a/src/data/src/AXOpen.Data.Blazor/IxDataExchange/Status/DataExchangeStatusView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/IxDataExchange/Status/DataExchangeStatusView.razor
@@ -1,4 +1,4 @@
-﻿@namespace ix.framework.data
+﻿@namespace AXOpen.Data
 @inherits RenderableViewModelComponentBase<DataExchangeStatusViewModel>
 
 <IxDataView Vm="@ViewModel.DataViewModel" Presentation="Status"></IxDataView>
