--- a/src/data/src/AXOpen.Data.Blazor/Views/IxDataView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/Views/IxDataView.razor
@@ -1,4 +1,4 @@
-﻿@namespace ix.framework.data
+﻿@namespace AXOpen.Data
 @using CommunityToolkit.Mvvm.ComponentModel;
 @using CommunityToolkit.Mvvm.Messaging;
 @using Microsoft.AspNetCore.Components.Forms;
